[package]
name = "nuc-091"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
stm32f0xx-hal = {version = "0.18", features = ["rt", "stm32f091"]}
nb = "1.0"
# oled
embedded-hal = "0.2"
# embedded-graphics = "0.7"
# ssd1306 = "0.7"
embedded-graphics = "0.8"
ssd1306 = {git="https://github.com/jamwaffles/ssd1306.git", hash="7271f39f55920f2212506843d7703aefbc65ffcf"}

ufmt = "0.2"
heapless = {version = "0.7", features = ["ufmt-impl"]}

[profile.release]
opt-level = 's'
codegen-units = 1
debug = true
lto = true
